# wp_attachment_cleaner

./: .gitignore  LICENSE  README.md  _env.py.example  pyproject.toml
attachment_cleaner/: __main__.py
