[tool.poetry]
name = "attachment-cleaner"
version = "0.1.0"
description = ""
authors = ["Jonathan Leeming <jonathan@leeming.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.10"
requests = "^2.32.3"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
